Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-9672

gss: fix expiration time of sunrpc cache

XMLWordPrintable

    • 3
    • 9223372036854775807

      Expiration time of sunrpc cache, used for communications between kernel space and user space for GSS credentials negotiation on server side, is misinterpreted.
      Downcall and response from user space must provide an epoch time, not a duration. And on kernel side, expiry must always be counted as seconds from boot, as set when retrieved from get_expiry().

            sbuisson Sebastien Buisson (Inactive)
            sbuisson Sebastien Buisson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: